force-app/main/default/objects/Contact/fields/Dealer_Role__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Role__c</fullName>
    <label>Dealer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Advisor</fullName>
                <default>true</default>
                <label>Service Advisor</label>
            </value>
            <value>
                <fullName>Service Manager</fullName>
            </value>
            <value>
                <fullName>Parts Manager</fullName>
            </value>
            <value>
                <fullName>Dealer Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>