force-app/main/default/objects/Contact/fields/Is_Claim_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Is_Claim_Submitter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this contact as authorised to submit warranty claims on behalf of the dealer.</description>
    <label>Is Claim Submitter</label>
    <type>Checkbox</type>
</CustomField>