force-app/main/default/objects/Contact/fields/WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Number__c</fullName>
    <description>WhatsApp number used by Agentforce Digital Engagement to communicate with the service advisor.</description>
    <label>WhatsApp Number</label>
    <type>Phone</type>
</CustomField>